--- a/src/main/resources/templates/tienda/productos.html
+++ b/src/main/resources/templates/tienda/productos.html
@@ -103,7 +103,9 @@
                                     <a th:href="@{'/productos/' + ${producto.idProducto}}" class="btn btn-light" title="Ver detalle">
                                         <i class="bi bi-eye"></i>
                                     </a>
-                                    <form th:action="@{/carrito/agregar}" method="post" class="d-inline">
+
+                                    <form th:action="@{/carrito/agregar}" method="post" class="d-inline"
+                                          sec:authorize="!hasRole('ADMIN')">
                                         <input type="hidden" name="productoId" th:value="${producto.idProducto}" />
                                         <input type="hidden" name="cantidad" value="1" />
                                         <button type="submit" class="btn btn-light" title="Añadir al carrito">
@@ -143,7 +145,8 @@
                                     </span>
                                 </div>
 
-                                <form th:action="@{/carrito/agregar}" method="post" class="mt-auto">
+                                <form th:action="@{/carrito/agregar}" method="post" class="mt-auto"
+                                      sec:authorize="!hasRole('ADMIN')">
                                     <input type="hidden" name="productoId" th:value="${producto.idProducto}" />
                                     <input type="hidden" name="cantidad" value="1" />
                                     <button type="submit" class="btn btn-primary w-100">
