Se agrego los cambios de la rama de joao

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -71,6 +71,11 @@
                             <i class="bi bi-fire small"></i> Ofertas
                         </a>
                     </li>
+                    <li class="mb-2">
+                        <a th:href="@{/nosotros}" class="text-white-50 text-decoration-none">
+                            <i class="bi bi-chevron-right small"></i> Nosotros
+                        </a>
+                    </li>
                 </ul>
             </div>
 
@@ -103,7 +108,7 @@
                         </a>
                     </li>
                     <li class="mb-2">
-                        <a href="#" class="text-white-50 text-decoration-none">
+                        <a th:href="@{/contacto}" class="text-white-50 text-decoration-none">
                             <i class="bi bi-chevron-right small"></i> Contacto
                         </a>
                     </li>
