--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -69,6 +69,16 @@
                         <i class="bi bi-fire me-1"></i> Ofertas
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/nosotros}">
+                        <i class="bi bi-people me-1"></i> Nosotros
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/contacto}">
+                        <i class="bi bi-envelope me-1"></i> Contacto
+                    </a>
+                </li>
             </ul>
 
             <!-- Buscador -->
@@ -101,7 +111,8 @@
 
                 <!-- Usuario autenticado -->
                 <!-- Carrito -->
-                <li class="nav-item position-relative" sec:authorize="isAuthenticated()">
+                <li class="nav-item position-relative"
+                    sec:authorize="isAuthenticated() and !hasRole('ADMIN')">
                     <a class="nav-link position-relative" th:href="@{/carrito}">
                         <i class="bi bi-cart3 fs-5"></i>
                         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
@@ -113,7 +124,8 @@
                 </li>
 
                 <!-- Favoritos -->
-                <li class="nav-item" sec:authorize="isAuthenticated()">
+                <li class="nav-item"
+                    sec:authorize="isAuthenticated() and !hasRole('ADMIN')">
                     <a class="nav-link" th:href="@{/favoritos}" title="Favoritos">
                         <i class="bi bi-heart fs-5"></i>
                     </a>
@@ -129,33 +141,33 @@
                         <span class="d-none d-lg-inline navbar-username" sec:authentication="name">Usuario</span>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
-                        <li>
-                            <h6 class="dropdown-header">
-                                <i class="bi bi-person-badge"></i> Mi Cuenta
-                            </h6>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" th:href="@{/mi-cuenta}">
-                                <i class="bi bi-person"></i> Mi Perfil
-                            </a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" th:href="@{/mi-cuenta/pedidos}">
-                                <i class="bi bi-box-seam"></i> Mis Pedidos
-                            </a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" th:href="@{/mi-cuenta/direcciones}">
-                                <i class="bi bi-geo-alt"></i> Mis Direcciones
-                            </a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" th:href="@{/favoritos}">
-                                <i class="bi bi-heart"></i> Mis Favoritos
-                            </a>
-                        </li>
-
-                        <!-- Sección Admin -->
+                        <th:block sec:authorize="!hasRole('ADMIN')">
+                            <li>
+                                <h6 class="dropdown-header">
+                                    <i class="bi bi-person-badge"></i> Mi Cuenta
+                                </h6>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" th:href="@{/mi-cuenta}">
+                                    <i class="bi bi-person"></i> Mi Perfil
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" th:href="@{/mi-cuenta/pedidos}">
+                                    <i class="bi bi-box-seam"></i> Mis Pedidos
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" th:href="@{/mi-cuenta/direcciones}">
+                                    <i class="bi bi-geo-alt"></i> Mis Direcciones
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" th:href="@{/favoritos}">
+                                    <i class="bi bi-heart"></i> Mis Favoritos
+                                </a>
+                            </li>
+                        </th:block>
                         <li sec:authorize="hasRole('ADMIN')">
                             <hr class="dropdown-divider">
                         </li>
@@ -169,18 +181,7 @@
                                 <i class="bi bi-speedometer2"></i> Dashboard
                             </a>
                         </li>
-                        <li sec:authorize="hasRole('ADMIN')">
-                            <a class="dropdown-item" th:href="@{/admin/productos}">
-                                <i class="bi bi-box"></i> Gestionar Productos
-                            </a>
-                        </li>
-                        <li sec:authorize="hasRole('ADMIN')">
-                            <a class="dropdown-item" th:href="@{/admin/pedidos}">
-                                <i class="bi bi-clipboard-check"></i> Gestionar Pedidos
-                            </a>
-                        </li>
 
-                        <!-- Cerrar Sesión -->
                         <li><hr class="dropdown-divider"></li>
                         <li>
                             <form th:action="@{/logout}" method="post" class="m-0">
